# mozyo_bridge

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  RELEASE_NOTES.md  module_health.yaml  mozyo_bridge.code-workspace  pyproject.toml  test_parallel_policy.yaml  test_runtime_budget.yaml
.claude/: settings.local.json
.claude-nagger/: config.yaml.example
.claude-plugin/: marketplace.json
.claude/skills/mozyo-bridge-agent/: SKILL.md
.codex/: config.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: publish.yml  test.yml  testpypi.yml
.mozyo-bridge/: config.yaml  redmine-defaults.md  scaffold.json  workspace-defaults.yaml  workspace.json
.mozyo-bridge/docs/: .gitignore  catalog.yaml  file_conventions.generated.yaml
.mozyo-bridge/rules/: llm_rule_authoring.md
.mozyo-bridge/tmux/: agent-ui.conf
experimental/vscode-agent-pane/: .vscodeignore  README.md  package-lock.json  package.json
experimental/vscode-agent-pane/scripts/: open-dev-host.sh
experimental/vscode-agent-pane/src/: extension.ts  workspaceInspect.ts
plugins/mozyo-bridge-agent/.claude-plugin/: plugin.json
scripts/: compute_testpypi_dev_version.py  disposable_ubuntu_smoke.py  install_claude_skill.sh  install_codex_skill.sh  install_testpypi_dev.sh  pre-commit-focused.sh  sync_plugin_skill.sh
skills/mozyo-bridge-agent/: SKILL.md
skills/mozyo-bridge-agent/agents/: openai.yaml
skills/mozyo-bridge-agent/references/: project-map.md  redmine-issue-authoring.md  release.md  safety.md  workflow.md
smoke/: installed_fault_smoke.py  installed_fault_smoke_driver.py  real_tmux_notify_smoke.py
smoke/support/: fake_herdr_cli.py
src/mozyo_bridge/: __init__.py  __main__.py  managed_events.py  otel_store.py  presentation_state.py  redmine_context.py  redmine_credentials.py  session_inventory.py  state_store.py  workspace_defaults.py  workspace_registry.py
src/mozyo_bridge/application/: agent_discovery_port.py  attention_projection.py  cli.py  cli_agents.py  cli_cockpit.py  cli_common.py  cli_core.py  cli_docs_scaffold.py  cli_handoff.py  cli_handoff_grandchild_realization.py  cli_module_health.py  cli_modules.py  cli_observability.py  commands.py  (+87 more)
tests/: __init__.py  test_agent_role_identity.py  test_attention_projection.py  test_attention_state.py  test_bare_mozyo_target_root.py  test_bootstrap_install_docs.py  test_claude_permission_policy.py  test_cli_module_registry.py  test_cli_parser_family_split.py  test_cli_repo_local_config_wiring.py  test_cockpit_actions.py  test_cockpit_adopt.py  test_cockpit_adopt_phase2.py  test_cockpit_append.py  test_cockpit_decision.py  test_cockpit_geometry.py  test_cockpit_group_window.py  test_cockpit_grouped_action.py  test_cockpit_lane_identity.py  test_cockpit_layout.py  test_cockpit_membership.py  test_cockpit_page.py  test_cockpit_payload.py  test_cockpit_peer_adopt.py  test_cockpit_presentation_placement.py  test_cockpit_rebalance.py  test_cockpit_reconcile.py  test_cockpit_reset.py  test_cockpit_ui.py  test_codex_autonomous_guardrail_lane.py  test_commands_otel_facade_characterization.py  test_compact_target_discovery.py  test_config_migration_v2.py  test_cross_workspace_handoff_gate.py  test_delegate_coordinator_lane_command.py  test_delegated_coordinator_acceptance_oracle.py  test_delegated_lane.py  test_delegation_launch_adopt.py  test_delegation_project_config.py  test_delegation_projection.py  (+74 more)
tests/integration/: __init__.py
tests/regressions/: __init__.py  test_issue_12474_delegated_route_gaps.py  test_issue_13555_installed_tests_profile_repo_root_import.py  test_issue_13571_grandchild_realization_binding.py  test_issue_13586_compute_partial_write.py  test_issue_13586_testpypi_dev_install.py  test_issue_13601_manual_gate_behavior.py  test_issue_13601_testpypi_exact_sha.py  test_issue_13647_lane_kind_lifecycle_authority.py  test_issue_13683_delivery_receipt_truth.py  test_issue_13683_lane_gateway_route.py  test_issue_13733_shard_env_hermetic.py  test_issue_13734_tiered_ci_gate.py  test_issue_13748_launcher_capability_preflight.py  test_issue_13754_retire_zero_close_fence.py  test_issue_13756_fill_actionability.py  test_issue_13758_event_driven_reconcile.py  test_issue_13760_startup_trust_admission.py  test_issue_13806_recover_stale_convergence.py  test_issue_13806_replacement_transaction_core.py  test_issue_13806_tranche_b_replacement_actuator.py  test_issue_13806_tranche_c_self_replacement_completion.py  test_issue_13806_tranche_d_recovery_live.py  test_issue_13806_tranche_d_stale_worker_recovery.py  test_issue_13809_live_adopt_owner_backfill.py  test_issue_13810_lifecycle_binding_generation.py  test_issue_13841_hibernated_legacy_retire_migration.py  test_issue_13842_hibernated_live_contradiction_reconcile.py  test_issue_13844_shared_lifecycle_schema_compat.py  test_issue_13845_hibernated_bound_live_zero_retire.py  test_issue_13846_worker_dispatch_admission.py  test_issue_13847_hibernated_pair_recovery.py  test_issue_13847_launcher_schema_compat.py  test_issue_13847_pair_recovery_live.py  test_issue_13847_pair_recovery_orchestration.py  test_issue_13847_post_launch_attestation.py  test_issue_13879_hibernated_bound_pin_repair.py  test_issue_13882_attestation_store_compat.py  test_issue_13883_source_ref_preflight.py  test_issue_13892_dispatch_disposition.py  (+46 more)
tests/scenarios/: __init__.py  test_delegated_coordinator_route_plan.py  test_disposable_ubuntu_smoke.py  test_herdr_entrypoint_preflight_recurrence.py  test_herdr_lane_choreography.py  test_herdr_worker_stable_target.py  test_installed_fault_path_harness.py  test_installed_fault_smoke.py  test_issue_14203_gateway_refresh_resume.py  test_release_workflow_container_smoke.py  test_semantic_target_selector_readiness.py  test_sublane_create_lane_kind_command_route.py  test_ticketless_project_gateway_readiness.py
tests/support/: __init__.py  agent_provider_binaries.py  delegation_route_fakes.py  herdr_fake.py  herdr_workspace_fixtures.py  installed_fault_harness.py  nested_python.py  private_path_fixtures.py
tests/unit/: __init__.py
(+1454 files in other folders)
