[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mozyo-bridge"
version = "0.6.2"
description = "Redmine-gated tmux pane notification bridge for Claude Code and Codex terminals"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
dependencies = [
    "build>=1.2",
    "PyYAML>=6.0",
    # `tomllib` is stdlib only on 3.11+; the package supports >=3.10, so the
    # instruction doctor's TOML parse falls back to `tomli` on 3.10.
    "tomli>=2.0; python_version < '3.11'",
]
authors = [
    { name = "takahorishizuru" },
]

[project.optional-dependencies]
# OTLP/HTTP protobuf decoding for the otel receiver (Redmine #11672).
# The receiver works without this extra when agents are configured with
# OTEL_EXPORTER_OTLP_PROTOCOL=http/json.
otel = ["opentelemetry-proto>=1.25"]
keywords = ["tmux", "codex", "claude", "redmine", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Topic :: Terminals",
]

[project.scripts]
mozyo-bridge = "mozyo_bridge.application.cli:main"
mozyo = "mozyo_bridge.application.cli:main"

[project.urls]
Homepage = "https://github.com/hollySizzle/mozyo_bridge"
Repository = "https://github.com/hollySizzle/mozyo_bridge"
Issues = "https://github.com/hollySizzle/mozyo_bridge/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mozyo_bridge = [
    "scaffold/presets/presets.yaml",
    "scaffold/presets/*/AGENTS.md",
    "scaffold/presets/*/CLAUDE.md",
    "scaffold/presets/*/VERSION",
    "scaffold/presets/*/agent-workflow.md",
    # Preset-shipped repo-local artifacts under `files/`. setuptools' glob
    # for `package-data` skips hidden directories by default, so the
    # generic `files/**/*` pattern alone drops the `.mozyo-bridge/`
    # subtree the governed preset ships. Enumerate the per-subdirectory
    # patterns explicitly to keep hidden directories in the wheel.
    "scaffold/presets/*/files/**/*",
    "scaffold/presets/*/files/.mozyo-bridge/**/*",
    "scaffold/presets/*/files/.mozyo-bridge/rules/*",
    "scaffold/presets/*/files/.mozyo-bridge/docs/*",
    "scaffold/presets/*/files/.mozyo-bridge/tmux/*",
    "scaffold/presets/*/files/.claude-nagger/**/*",
    "scaffold/presets/*/files/.claude-nagger/*",
    "scaffold/presets/*/files/.claude-nagger/.gitignore",
    # Canonical conditional-renderer sources for the router pair
    # (Redmine #10345). Outputs are committed under scaffold/presets/_router/;
    # the YAML and adjacent body files travel with the wheel so an editable
    # install can run `mozyo-bridge scaffold canonical` (default render) or
    # `mozyo-bridge scaffold canonical --check` (drift gate).
    "scaffold/canonical_sources/*.yaml",
    "scaffold/canonical_sources/*/bodies/*.md",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
