[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mozyo-bridge"
version = "0.9.2"
description = "Redmine-gated tmux pane notification bridge for Claude Code and Codex terminals"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
dependencies = [
    "build>=1.2",
    "PyYAML>=6.0",
    # `tomllib` is stdlib only on 3.11+; the package supports >=3.10, so the
    # instruction doctor's TOML parse falls back to `tomli` on 3.10.
    "tomli>=2.0; python_version < '3.11'",
]
authors = [
    { name = "takahorishizuru" },
]

keywords = ["tmux", "codex", "claude", "redmine", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Topic :: Terminals",
]

[project.optional-dependencies]
# OTLP/HTTP protobuf decoding for the otel receiver (Redmine #11672).
# The receiver works without this extra when agents are configured with
# OTEL_EXPORTER_OTLP_PROTOCOL=http/json.
otel = ["opentelemetry-proto>=1.25"]
# Static type checker for the OOP-first staged typing gate (Redmine #12642 /
# Version #276). Opt-in dev extra so the type check is reproducible without
# adding a runtime dependency or auto-installing anything. Run the gate with
# `python -m mypy` from the repo root (config below). See
# vibes/docs/logics/static-typing-adoption-policy.md.
typecheck = ["mypy>=1.8"]

[project.scripts]
mozyo-bridge = "mozyo_bridge.application.cli:main"
mozyo = "mozyo_bridge.application.cli:main"

[project.urls]
Homepage = "https://github.com/hollySizzle/mozyo_bridge"
Repository = "https://github.com/hollySizzle/mozyo_bridge"
Issues = "https://github.com/hollySizzle/mozyo_bridge/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mozyo_bridge = [
    # Source-of-truth config for the ticketless / delegated workflow-contract
    # reference bundles (Redmine #12953). The runtime resolver reads it at import
    # time, so it must travel with the wheel.
    "e_110_execution_platform/f_130_handoff_routing/domain/workflow_contract_config.yaml",
    "scaffold/presets/presets.yaml",
    "scaffold/presets/*/AGENTS.md",
    "scaffold/presets/*/CLAUDE.md",
    "scaffold/presets/*/VERSION",
    "scaffold/presets/*/agent-workflow.md",
    # Preset-shipped repo-local artifacts under `files/`. setuptools' glob
    # for `package-data` skips hidden directories by default, so the
    # generic `files/**/*` pattern alone drops the `.mozyo-bridge/`
    # subtree the governed preset ships. Enumerate the per-subdirectory
    # patterns explicitly to keep hidden directories in the wheel.
    "scaffold/presets/*/files/**/*",
    "scaffold/presets/*/files/.mozyo-bridge/**/*",
    "scaffold/presets/*/files/.mozyo-bridge/rules/*",
    "scaffold/presets/*/files/.mozyo-bridge/docs/*",
    "scaffold/presets/*/files/.mozyo-bridge/docs/.gitignore",
    "scaffold/presets/*/files/.mozyo-bridge/tmux/*",
    "scaffold/presets/*/files/.claude-nagger/**/*",
    "scaffold/presets/*/files/.claude-nagger/*",
    "scaffold/presets/*/files/.claude-nagger/.gitignore",
    # Opt-in worktree/sublane runbook docs (Redmine #11955). `vibes/` is
    # not a hidden directory, so `files/**/*` already covers it; this
    # explicit pattern mirrors the others and pins the wheel contents.
    "scaffold/presets/*/files/vibes/docs/logics/*.md",
    # Canonical conditional-renderer sources for the router pair
    # (Redmine #10345). Outputs are committed under scaffold/presets/_router/;
    # the YAML and adjacent body files travel with the wheel so an editable
    # install can run `mozyo-bridge scaffold canonical` (default render) or
    # `mozyo-bridge scaffold canonical --check` (drift gate).
    "scaffold/canonical_sources/*.yaml",
    "scaffold/canonical_sources/*/bodies/*.md",
]

[tool.pytest.ini_options]
pythonpath = ["src"]

# --- Static typing staged adoption (Redmine #12642 / Version #276) -----------
# OOP-first architecture is adopted together with static typing. This is the
# CONSERVATIVE FIRST gate: the default `python -m mypy` run checks only the
# typed bounded-context islands listed in `files`. Whole-repo strict typing is
# explicitly NOT the first gate; new OOP-first object boundaries (value object /
# result object / Protocol port / use-case injection) are added to `files` as
# each tranche lands. Rationale, staged priority, and the ratchet plan live in
# vibes/docs/logics/static-typing-adoption-policy.md.
[tool.mypy]
python_version = "3.10"
mypy_path = "src"
files = [
    "src/mozyo_bridge/e_150_quality_architecture/f_150_ci_verification/domain",
]
# The repo is not yet type-clean as a whole: do not chase imports out of the
# typed island into untyped modules, and tolerate third-party packages that
# ship no stubs (e.g. PyYAML). This keeps the gate scoped without erroring on
# the surrounding, not-yet-typed code.
follow_imports = "silent"
ignore_missing_imports = true
# Low-noise correctness signal that does not demand the rest of the repo be
# typed first.
warn_redundant_casts = true
warn_unused_ignores = true
warn_unused_configs = true
no_implicit_optional = true

# The typed island is held to a stricter bar than the surrounding repo: it is
# fully annotated today and must stay that way. Tightening per-module here (not
# globally) is how the gate ratchets one bounded context at a time.
[[tool.mypy.overrides]]
module = "mozyo_bridge.e_150_quality_architecture.f_150_ci_verification.domain.*"
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
warn_return_any = true
